crates/sniff-test/tests/snapshots/fixtures__trusted_boundaries.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "unresolved-call-target",
    "function": "trusted_boundaries::trusted_through_fn_pointer",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "panic effect coverage is incomplete for unresolved function-pointer call target",
    "root": "trusted_boundaries::trusted_through_fn_pointer",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:22:1: 22:65",
    "span": "src/lib.rs:24:5: 24:17",
    "trace": [
      "src/lib.rs:24:5: 24:17: trusted_boundaries::trusted_through_fn_pointer --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "355a46e9",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  },
  {
    "effect": "safety",
    "finding": "unresolved-call-target",
    "function": "trusted_boundaries::trusted_through_fn_pointer",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "safety effect coverage is incomplete for unresolved function-pointer call target",
    "root": "trusted_boundaries::trusted_through_fn_pointer",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:22:1: 22:65",
    "span": "src/lib.rs:24:5: 24:17",
    "trace": [
      "src/lib.rs:24:5: 24:17: trusted_boundaries::trusted_through_fn_pointer --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "f62b64e5",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  },
  {
    "effect": "panic",
    "finding": "unresolved-call-target",
    "function": "trusted_boundaries::trusted_unresolved_wrapper",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "panic effect coverage is incomplete for unresolved function-pointer call target",
    "root": "trusted_boundaries::trusted_unresolved_wrapper",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:76:1: 76:50",
    "span": "src/lib.rs:77:5: 77:15",
    "trace": [
      "src/lib.rs:77:5: 77:15: trusted_boundaries::trusted_unresolved_wrapper --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "c84da002",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  },
  {
    "effect": "safety",
    "finding": "unresolved-call-target",
    "function": "trusted_boundaries::trusted_unresolved_wrapper",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "safety effect coverage is incomplete for unresolved function-pointer call target",
    "root": "trusted_boundaries::trusted_unresolved_wrapper",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:76:1: 76:50",
    "span": "src/lib.rs:77:5: 77:15",
    "trace": [
      "src/lib.rs:77:5: 77:15: trusted_boundaries::trusted_unresolved_wrapper --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "aad118dc",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  },
  {
    "effect": "panic",
    "finding": "unresolved-call-target",
    "function": "trusted_boundaries::trusted_unsafe_through_fn_pointer",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "panic effect coverage is incomplete for unresolved function-pointer call target",
    "root": "trusted_boundaries::trusted_unsafe_through_fn_pointer",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:31:1: 31:82",
    "span": "src/lib.rs:33:14: 33:22",
    "trace": [
      "src/lib.rs:33:14: 33:22: trusted_boundaries::trusted_unsafe_through_fn_pointer --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "62b696a8",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  },
  {
    "effect": "safety",
    "finding": "concrete-invocation",
    "function": "trusted_boundaries::trusted_unsafe_through_fn_pointer",
    "kind": "effect",
    "level": "warn",
    "operation": "unsafe-call",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "safety invocation to `opaque function pointer` has no recorded `// SAFETY:` justification",
    "root": "trusted_boundaries::trusted_unsafe_through_fn_pointer",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:31:1: 31:82",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:33:14: 33:22",
    "target": "opaque function pointer",
    "trace": [
      "src/lib.rs:33:14: 33:22: trusted_boundaries::trusted_unsafe_through_fn_pointer --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "2a0e1673"
  },
  {
    "effect": "safety",
    "finding": "unresolved-call-target",
    "function": "trusted_boundaries::trusted_unsafe_through_fn_pointer",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "safety effect coverage is incomplete for unresolved function-pointer call target",
    "root": "trusted_boundaries::trusted_unsafe_through_fn_pointer",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:31:1: 31:82",
    "span": "src/lib.rs:33:14: 33:22",
    "trace": [
      "src/lib.rs:33:14: 33:22: trusted_boundaries::trusted_unsafe_through_fn_pointer --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "e11a5c18",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  },
  {
    "effect": "safety",
    "finding": "undocumented-invocation",
    "function": "trusted_boundaries::trusted_unsafe_without_docs",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "call to `trusted_boundaries::unsafe_helper` may produce the safety effect, but `trusted_boundaries::unsafe_helper` has no documented `# Safety` obligation",
    "root": "trusted_boundaries::trusted_unsafe_without_docs",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:27:1: 27:37",
    "span": "src/lib.rs:28:14: 28:29",
    "target": "trusted_boundaries::unsafe_helper",
    "trace": [
      "src/lib.rs:28:14: 28:29: trusted_boundaries::trusted_unsafe_without_docs --direct-call-> trusted_boundaries::unsafe_helper"
    ],
    "trace-id": "24f73151"
  },
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "trusted_boundaries::trusted_with_docs",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "call to `trusted_boundaries::trusted_doc_helper` with a documented `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "trusted_boundaries::trusted_with_docs",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:5:1: 5:37",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:6:5: 6:29",
    "target": "trusted_boundaries::trusted_doc_helper",
    "trace": [
      "src/lib.rs:6:5: 6:29: trusted_boundaries::trusted_with_docs --direct-call-> trusted_boundaries::trusted_doc_helper"
    ],
    "trace-id": "88e7e18e"
  },
  {
    "effect": "panic",
    "finding": "unresolved-call-target",
    "function": "trusted_boundaries::untrusted_unresolved_wrapper",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "panic effect coverage is incomplete for unresolved function-pointer call target",
    "root": "trusted_boundaries::untrusted_unresolved_wrapper",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:80:1: 80:52",
    "span": "src/lib.rs:81:5: 81:15",
    "trace": [
      "src/lib.rs:81:5: 81:15: trusted_boundaries::untrusted_unresolved_wrapper --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "73b23ca4",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  },
  {
    "effect": "safety",
    "finding": "unresolved-call-target",
    "function": "trusted_boundaries::untrusted_unresolved_wrapper",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "safety effect coverage is incomplete for unresolved function-pointer call target",
    "root": "trusted_boundaries::untrusted_unresolved_wrapper",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:80:1: 80:52",
    "span": "src/lib.rs:81:5: 81:15",
    "trace": [
      "src/lib.rs:81:5: 81:15: trusted_boundaries::untrusted_unresolved_wrapper --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "0e9e21f2",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  }
]
