crates/sniff-test/tests/snapshots/fixtures__trusted_boundaries_call_sites.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "trusted_boundaries"
    },
    "dependencies": [],
    "findings": [
      {
        "function": "trusted_boundaries::trusted_unsafe_through_fn_pointer",
        "kind": "unsafe-call-missing-justification",
        "level": "warn",
        "reason": "unsafe call to `unsafe function pointer` has no `// SAFETY:` justification",
        "root": "trusted_boundaries::trusted_unsafe_through_fn_pointer",
        "root-kind": "concrete",
        "span": "src/lib.rs:33:14: 33:22",
        "target": "unsafe function pointer"
      },
      {
        "kind": "indirect-call-boundary",
        "level": "warn",
        "reason": "indirect call through an opaque callable cannot be verified",
        "root": "trusted_boundaries::trusted_through_fn_pointer",
        "root-kind": "concrete",
        "span": "src/lib.rs:24:5: 24:17",
        "trace": [
          "src/lib.rs:24:5: 24:17: trusted_boundaries::trusted_through_fn_pointer --indirect-call-> indirect call Binder { value: fn(bool), bound_vars: [] }"
        ]
      },
      {
        "kind": "indirect-call-boundary",
        "level": "warn",
        "reason": "indirect call through an opaque callable cannot be verified",
        "root": "trusted_boundaries::trusted_unsafe_through_fn_pointer",
        "root-kind": "concrete",
        "span": "src/lib.rs:33:14: 33:22",
        "trace": [
          "src/lib.rs:33:14: 33:22: trusted_boundaries::trusted_unsafe_through_fn_pointer --indirect-call-> indirect call Binder { value: unsafe fn(), bound_vars: [] }"
        ]
      },
      {
        "kind": "trusted-panic",
        "level": "warn",
        "reason": "trusted_boundaries::trusted_doc_helper documents when it may panic under # Panics",
        "root": "trusted_boundaries::trusted_with_docs",
        "root-kind": "concrete",
        "span": "src/lib.rs:6:5: 6:29",
        "target": "trusted_boundaries::trusted_doc_helper",
        "trace": [
          "src/lib.rs:6:5: 6:29: trusted_boundaries::trusted_with_docs --direct-call-> trusted_boundaries::trusted_doc_helper"
        ]
      }
    ],
    "format-version": 10,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
