crates/sniff-test/tests/snapshots/fixtures__trusted_boundaries_untrusted.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "trusted_boundaries"
    },
    "dependencies": [],
    "findings": [
      {
        "kind": "documented-panic",
        "level": "warn",
        "reason": "trusted_boundaries::trusted_doc_helper documents when it may panic under # Panics",
        "root": "trusted_boundaries::trusted_with_docs",
        "root-kind": "concrete",
        "span": "src/lib.rs:6:5: 6:29",
        "target": "trusted_boundaries::trusted_doc_helper",
        "trace": [
          "src/lib.rs:6:5: 6:29: trusted_boundaries::trusted_with_docs --direct-call-> trusted_boundaries::trusted_doc_helper"
        ]
      },
      {
        "kind": "panic-invocation",
        "level": "deny",
        "reason": "panic sink core::panicking::panic",
        "root": "trusted_boundaries::trusted_without_docs",
        "root-kind": "concrete",
        "span": "src/lib.rs:10:5: 10:18",
        "target": "core::panicking::panic",
        "trace": [
          "src/lib.rs:2:5: 2:25: trusted_boundaries::trusted_without_docs --direct-call-> trusted_boundaries::trusted_helper",
          "src/lib.rs:10:5: 10:18: trusted_boundaries::trusted_helper --macro-expansion-> macro core::std::assert",
          "src/lib.rs:10:5: 10:18: macro core::std::assert --direct-call-> core::panicking::panic"
        ]
      }
    ],
    "format-version": 5,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
