crates/sniff-test/tests/snapshots/fixtures__trusted_unresolved_boundaries.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "unresolved-call-target",
    "function": "trusted_boundaries::untrusted_unresolved_wrapper",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "panic effect coverage is incomplete for unresolved function-pointer call target",
    "root": "trusted_boundaries::untrusted_unresolved_wrapper",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:80:1: 80:52",
    "span": "src/lib.rs:81:5: 81:15",
    "trace": [
      "src/lib.rs:81:5: 81:15: trusted_boundaries::untrusted_unresolved_wrapper --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "73b23ca4",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  },
  {
    "effect": "safety",
    "finding": "unresolved-call-target",
    "function": "trusted_boundaries::untrusted_unresolved_wrapper",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "trusted_boundaries",
      "scope": "workspace"
    },
    "reason": "safety effect coverage is incomplete for unresolved function-pointer call target",
    "root": "trusted_boundaries::untrusted_unresolved_wrapper",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:80:1: 80:52",
    "span": "src/lib.rs:81:5: 81:15",
    "trace": [
      "src/lib.rs:81:5: 81:15: trusted_boundaries::untrusted_unresolved_wrapper --indirect-call-> indirect call through a function pointer"
    ],
    "trace-id": "0e9e21f2",
    "unresolved-call": {
      "coverage": "none",
      "mechanism": "function-pointer"
    }
  }
]
