crates/sniff-test/tests/snapshots/fixtures__unsafe_closure_inherit.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "safety",
    "finding": "undocumented-invocation",
    "function": "unsafe_closure_inherit::justified_closure::{closure#0}",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "unsafe_closure_inherit",
      "scope": "workspace"
    },
    "reason": "call to `unsafe_closure_inherit::dangerous` may produce the safety effect, but `unsafe_closure_inherit::dangerous` has no documented `# Safety` obligation",
    "root": "unsafe_closure_inherit::justified_closure",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:3:1: 3:27",
    "span": "src/lib.rs:6:13: 6:24",
    "target": "unsafe_closure_inherit::dangerous",
    "trace": [
      "src/lib.rs:6:9: 6:27: unsafe_closure_inherit::justified_closure --direct-call-> unsafe_closure_inherit::justified_closure::{closure#0}",
      "src/lib.rs:6:13: 6:24: unsafe_closure_inherit::justified_closure::{closure#0} --direct-call-> unsafe_closure_inherit::dangerous"
    ],
    "trace-id": "408cd3aa"
  },
  {
    "effect": "safety",
    "finding": "undocumented-invocation",
    "function": "unsafe_closure_inherit::unjustified_closure::{closure#0}",
    "kind": "effect",
    "level": "warn",
    "owner": {
      "crate": "unsafe_closure_inherit",
      "scope": "workspace"
    },
    "reason": "call to `unsafe_closure_inherit::dangerous` may produce the safety effect, but `unsafe_closure_inherit::dangerous` has no documented `# Safety` obligation",
    "root": "unsafe_closure_inherit::unjustified_closure",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:10:1: 10:29",
    "span": "src/lib.rs:12:13: 12:24",
    "target": "unsafe_closure_inherit::dangerous",
    "trace": [
      "src/lib.rs:12:9: 12:27: unsafe_closure_inherit::unjustified_closure --direct-call-> unsafe_closure_inherit::unjustified_closure::{closure#0}",
      "src/lib.rs:12:13: 12:24: unsafe_closure_inherit::unjustified_closure::{closure#0} --direct-call-> unsafe_closure_inherit::dangerous"
    ],
    "trace-id": "f4e27af3"
  }
]
