crates/sniff-test/tests/snapshots/fixtures__unsafe_const_init.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "unsafe_const_init"
    },
    "dependencies": [],
    "findings": [
      {
        "function": "unsafe_const_init::UNJUSTIFIED_STATIC",
        "kind": "unsafe-call-missing-justification",
        "level": "warn",
        "reason": "unsafe call to `unsafe_const_init::seeded` has no `// SAFETY:` justification",
        "span": "src/lib.rs:5:47: 5:55",
        "target": "unsafe_const_init::seeded"
      },
      {
        "function": "unsafe_const_init::UNJUSTIFIED_CONST",
        "kind": "unsafe-call-missing-justification",
        "level": "warn",
        "reason": "unsafe call to `unsafe_const_init::seeded` has no `// SAFETY:` justification",
        "span": "src/lib.rs:11:45: 11:53",
        "target": "unsafe_const_init::seeded"
      }
    ],
    "format-version": 5,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
