crates/sniff-test/tests/snapshots/fixtures__untrusted_higher_order.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "app::higher_order_closure_effect",
    "kind": "effect",
    "level": "deny",
    "owner": {
      "crate": "app",
      "scope": "workspace"
    },
    "reason": "call to `trusted::consume_maybe_untrusted_closure` with a documented `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "app::higher_order_closure_effect",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:12:1: 12:37",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:14:5: 14:42",
    "target": "trusted::consume_maybe_untrusted_closure",
    "trace": [
      "src/lib.rs:14:5: 14:42: app::higher_order_closure_effect --direct-call-> trusted::consume_maybe_untrusted_closure"
    ],
    "trace-id": "9cb014c7"
  },
  {
    "effect": "panic",
    "finding": "documented-obligation",
    "function": "app::higher_order_function_impl_effect",
    "kind": "effect",
    "level": "deny",
    "owner": {
      "crate": "app",
      "scope": "workspace"
    },
    "reason": "call to `trusted::BlanketFromUntrustedParty::boom` with a documented `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "app::higher_order_function_impl_effect",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:17:1: 17:43",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:19:5: 19:42",
    "target": "trusted::BlanketFromUntrustedParty::boom",
    "trace": [
      "src/lib.rs:19:5: 19:42: app::higher_order_function_impl_effect --direct-call-> trusted::BlanketFromUntrustedParty::boom"
    ],
    "trace-id": "f8834437"
  },
  {
    "effect": "panic",
    "finding": "concrete-invocation",
    "function": "app::option_and_then_callback_effect::{closure#0}",
    "kind": "effect",
    "level": "deny",
    "operation": "configured-invocation",
    "owner": {
      "crate": "app",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic_fmt` has no recorded `// PANIC:` justification",
    "root": "app::option_and_then_callback_effect",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:42:1: 42:41",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:43:42: 43:77",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:43:5: 43:80: app::option_and_then_callback_effect --direct-call-> core::option::Option::<T>::and_then",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/option.rs:1543:24: 1543:28: core::option::Option::<T>::and_then --direct-call-> app::option_and_then_callback_effect::{closure#0}",
      "src/lib.rs:43:42: 43:77: app::option_and_then_callback_effect::{closure#0} --macro-expansion-> macro std::macros::panic",
      "src/lib.rs:43:42: 43:77: macro std::macros::panic --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ],
    "trace-id": "1469c3d3"
  },
  {
    "effect": "panic",
    "finding": "concrete-invocation",
    "function": "app::option_map_callback_effect::{closure#0}",
    "kind": "effect",
    "level": "deny",
    "operation": "configured-invocation",
    "owner": {
      "crate": "app",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic_fmt` has no recorded `// PANIC:` justification",
    "root": "app::option_map_callback_effect",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:38:1: 38:36",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:39:21: 39:51",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:39:5: 39:52: app::option_map_callback_effect --direct-call-> core::option::Option::<T>::map",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/option.rs:1162:29: 1162:33: core::option::Option::<T>::map --direct-call-> app::option_map_callback_effect::{closure#0}",
      "src/lib.rs:39:21: 39:51: app::option_map_callback_effect::{closure#0} --macro-expansion-> macro std::macros::panic",
      "src/lib.rs:39:21: 39:51: macro std::macros::panic --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ],
    "trace-id": "0c7f6e76"
  }
]
