crates/sniff-test/tests/snapshots/fixtures__vendored_dep.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "kind": "documented-panic",
    "level": "warn",
    "owner": {
      "crate": "vendored_app",
      "package-name": "vendored-app",
      "package-version": "0.1.0",
      "scope": "workspace"
    },
    "reason": "call to `vendored::checked` with a `# Panics` obligation has no recorded `// PANIC:` justification",
    "root": "vendored_app::use_vendored",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:1:1: 1:32",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:2:5: 2:28",
    "target": "vendored::checked",
    "trace": [
      "src/lib.rs:2:5: 2:28: vendored_app::use_vendored --direct-call-> vendored::checked"
    ]
  }
]
