crates/sniff-test/tests/snapshots/fixtures__visibility_roots.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "panic",
    "finding": "concrete-invocation",
    "function": "visibility_roots::imp::exported",
    "kind": "effect",
    "level": "deny",
    "operation": "configured-invocation",
    "owner": {
      "crate": "visibility_roots",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic_fmt` has no recorded `// PANIC:` justification",
    "root": "visibility_roots::imp::exported",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:6:5: 6:32",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:7:9: 7:53",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:7:9: 7:53: visibility_roots::imp::exported --macro-expansion-> macro core::macros::builtin::assert",
      "src/lib.rs:7:9: 7:53: macro core::macros::builtin::assert --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ],
    "trace-id": "dc7eccd5"
  },
  {
    "effect": "panic",
    "finding": "concrete-invocation",
    "function": "visibility_roots::imp::hidden",
    "kind": "effect",
    "level": "deny",
    "operation": "configured-invocation",
    "owner": {
      "crate": "visibility_roots",
      "scope": "workspace"
    },
    "reason": "panic invocation to `core::panicking::panic_fmt` has no recorded `// PANIC:` justification",
    "root": "visibility_roots::public_entry",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:13:1: 13:32",
    "source-evidence": {
      "status": "verified-absent"
    },
    "span": "src/lib.rs:3:9: 3:51",
    "target": "core::panicking::panic_fmt",
    "trace": [
      "src/lib.rs:14:5: 14:22: visibility_roots::public_entry --direct-call-> visibility_roots::imp::hidden",
      "src/lib.rs:3:9: 3:51: visibility_roots::imp::hidden --macro-expansion-> macro core::macros::builtin::assert",
      "src/lib.rs:3:9: 3:51: macro core::macros::builtin::assert --macro-expansion-> macro core::panic::panic_2021",
      "[SYSROOT]/lib/rustlib/src/rust/library/core/src/panic.rs:62:9: 62:73: macro core::panic::panic_2021 --direct-call-> core::panicking::panic_fmt"
    ],
    "trace-id": "c6505e17"
  }
]
