crates/sniff-test/tests/snapshots/fixtures__visibility_roots_panic_ignored.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "crate-name": "visibility_roots"
    },
    "findings": [
      {
        "function": "visibility_roots::reachable_unsafe",
        "kind": "unsafe-op-missing-justification",
        "level": "warn",
        "reason": "unsafe operation (raw pointer dereference) has no `// SAFETY:` justification",
        "root": "visibility_roots::public_unsafe_entry",
        "root-kind": "concrete",
        "safety-op-kind": "raw-pointer-dereference",
        "span": "src/lib.rs:22:14: 22:22",
        "trace": [
          "src/lib.rs:18:5: 18:30: visibility_roots::public_unsafe_entry --direct-call-> visibility_roots::reachable_unsafe",
          "src/lib.rs:22:14: 22:22: visibility_roots::reachable_unsafe --unsafe-operation-> unsafe operation (raw pointer dereference)"
        ]
      }
    ],
    "format-version": 12,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
